examples/should_pass/dependent-simple.anvil
/* This is intended to be used for the filament translated pipelines. */

chan Reg_itfc {
    left input_v : (logic@#1) @dyn-@#1,
    right output : (logic@#1) @#data+1-@#data+1
}

proc Reg (endp : left Reg_itfc) {
    reg r : logic;
    loop {
        let r_val = recv endp.input_v >>
        set r := r_val >>
        send endp.output (*r)
    }
}
